argocd/backstage/clusters/shashank-b1/apps/server-app/app/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test3
  labels:
    backstage.io/kubernetes-id: server-app
    istio.io/dataplane-mode: ambient
---
apiVersion: v1
kind: Service
metadata:
  name: server-app
  namespace: test3
  labels:
    app: server-app
    backstage.io/kubernetes-id: server-app
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: server-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-app
  namespace: test3
  labels:
    backstage.io/kubernetes-id: server-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-app
  template:
    metadata:
      labels:
        app: server-app
        backstage.io/kubernetes-id: server-app
    spec:
      serviceAccountName: server-app
      containers:
      - image: docker.io/kcbabo/keith-react-app:latest
        imagePullPolicy: Always
        name: server-app
        ports:
        - containerPort: 80
