argocd/backstage/clusters/shashank-b1/apps/server-app/app/istio-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: server-app
  namespace: test3
  labels:
    backstage.io/kubernetes-id: server-app
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces:
          - test2
